# audio-master-checker

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  audio-master-checker  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
audio_master_checker/: analyzer.py  cli.py  codecs.py  ffmpeg_tools.py  fix.py  metrics.py  report_paths.py  reports.py  verdict.py
audio_master_checker/web/: app.py
audio_master_checker/web/static/: style.css
audio_master_checker/web/templates/: index.html  report.html
scripts/: analyze_audio.py
tests/: test_cli.py  test_ffmpeg_tools.py  test_fix.py  test_metrics.py  test_report_paths.py  test_reports.py  test_verdict.py  test_web.py
