[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-master-checker"
version = "0.1.0"
description = "CLI and web audio mastering analyzer with safer delivery WAV generation"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "soundfile",
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "python-multipart",
  "markdown",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[project.scripts]
audio-master-checker = "audio_master_checker.cli:main"
